// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox snapshot > Checkbox demo snapshot 0 1`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-checkbox bui-checkbox-label-right"
    >
      <input
        class="bui-checkbox-input"
        type="checkbox"
      />
      <div
        class="bui-checkbox-icon"
      >
        <svg
          class="bui-svg-icon"
          color="var(--bui-color-fg-disabled)"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
          />
        </svg>
      </div>
      <div
        class="bui-checkbox-label"
      >
        Checkbox
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox snapshot > Checkbox demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-checkbox bui-checkbox-label-right"
    >
      <input
        class="bui-checkbox-input my-input"
        type="checkbox"
      />
      <div
        class="bui-checkbox-icon"
      >
        <svg
          class="bui-svg-icon"
          color="var(--bui-color-fg-disabled)"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
          />
        </svg>
      </div>
      <div
        class="bui-checkbox-label"
      >
        Checkbox
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox snapshot > Checkbox demo snapshot 0 3`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-checkbox bui-checkbox-label-right"
    >
      <input
        class="bui-checkbox-input"
        name="myCheckbox"
        type="checkbox"
        value="tpp"
      />
      <div
        class="bui-checkbox-icon"
      >
        <svg
          class="bui-svg-icon"
          color="var(--bui-color-fg-disabled)"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
          />
        </svg>
      </div>
      <div
        class="bui-checkbox-label"
      >
        Checkbox
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox snapshot > Checkbox demo snapshot 0 4`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      style="width: 100px;"
    >
      <div
        class="bui-checkbox bui-checkbox-label-top"
      >
        <input
          class="bui-checkbox-input"
          type="checkbox"
        />
        <div
          class="bui-checkbox-icon"
        >
          <svg
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
            />
          </svg>
        </div>
        <div
          class="bui-checkbox-label"
        >
          文案在上边
        </div>
      </div>
      <div
        class="bui-checkbox bui-checkbox-label-right"
      >
        <input
          class="bui-checkbox-input"
          type="checkbox"
        />
        <div
          class="bui-checkbox-icon"
        >
          <svg
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
            />
          </svg>
        </div>
        <div
          class="bui-checkbox-label"
        >
          文案在右边
        </div>
      </div>
      <div
        class="bui-checkbox bui-checkbox-label-bottom"
      >
        <input
          class="bui-checkbox-input"
          type="checkbox"
        />
        <div
          class="bui-checkbox-icon"
        >
          <svg
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
            />
          </svg>
        </div>
        <div
          class="bui-checkbox-label"
        >
          文案在下边
        </div>
      </div>
      <div
        class="bui-checkbox bui-checkbox-label-left"
      >
        <input
          class="bui-checkbox-input"
          type="checkbox"
        />
        <div
          class="bui-checkbox-icon"
        >
          <svg
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
            />
          </svg>
        </div>
        <div
          class="bui-checkbox-label"
        >
          文案在左边
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox snapshot > Checkbox demo snapshot 0 5`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-checkbox bui-checkbox-label-right"
    >
      <input
        class="bui-checkbox-input"
        type="checkbox"
      />
      <div
        class="bui-checkbox-icon"
      >
        <svg
          class="bui-svg-icon"
          color="#ccc"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M62.6 11C78.1 11 88 23.4 88 40.1c0 13-11.7 27.2-34.8 43.3-3.1 2.2-7.2 2.2-10.3 0C19.7 67.3 8 53.1 8 40.1 8 23.4 17.9 11 33.4 11c5.6 0 9.4 2 14.6 6.4C53.2 13 57 11 62.6 11zm0 5.9c-3.9 0-6.6 1.4-11 5.2-.2.2-1.4 1.2-1.7 1.4-1.1 1-2.8 1-3.9 0-.3-.3-1.5-1.3-1.7-1.4-4.4-3.7-7.1-5.2-11-5.2C21.6 16.9 14 26.4 14 40c0 10.4 10.6 23.3 32.3 38.3 1 .7 2.4.7 3.4 0C71.4 63.3 82 50.4 82 40c0-13.6-7.6-23.1-19.4-23.1z"
          />
        </svg>
      </div>
      <div
        class="bui-checkbox-label"
      >
        Checkbox
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox snapshot > Checkbox demo snapshot 0 6`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-checkbox bui-checkbox-label-right bui-checkbox-disabled"
    >
      <input
        aria-disabled="true"
        class="bui-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <div
        class="bui-checkbox-icon"
      >
        <svg
          class="bui-svg-icon"
          color="var(--bui-color-fg-disabled)"
          focusable="false"
          viewBox="0 0 96 96"
        >
          <path
            d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
          />
        </svg>
      </div>
      <div
        class="bui-checkbox-label"
      >
        Checkbox
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox snapshot > Checkbox demo snapshot 0 7`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      class="bui-checkbox-group"
    >
      <div
        class="bui-checkbox bui-checkbox-label-right"
      >
        <input
          class="bui-checkbox-input"
          type="checkbox"
          value="水门桥"
        />
        <div
          class="bui-checkbox-icon"
        >
          <svg
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
            />
          </svg>
        </div>
        <div
          class="bui-checkbox-label"
        >
          水门桥
        </div>
      </div>
      <div
        class="bui-checkbox bui-checkbox-label-right"
      >
        <input
          class="bui-checkbox-input"
          type="checkbox"
          value="淘票票"
        />
        <div
          class="bui-checkbox-icon"
        >
          <svg
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
            />
          </svg>
        </div>
        <div
          class="bui-checkbox-label"
        >
          淘票票
        </div>
      </div>
      <div
        class="bui-checkbox bui-checkbox-label-right"
      >
        <input
          class="bui-checkbox-input"
          type="checkbox"
          value="喜洋洋"
        />
        <div
          class="bui-checkbox-icon"
        >
          <svg
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
            />
          </svg>
        </div>
        <div
          class="bui-checkbox-label"
        >
          喜洋洋
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox snapshot > Checkbox demo snapshot 0 8`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      style="width: 100px;"
    >
      <button
        class="bui-btn bui-btn-outlined bui-btn-medium"
        type="button"
      >
        Uncheck
         All
      </button>
      <div
        class="bui-checkbox-group"
      >
        <div
          class="bui-checkbox bui-checkbox-label-right"
        >
          <input
            checked=""
            class="bui-checkbox-input"
            type="checkbox"
            value="水门桥"
          />
          <div
            class="bui-checkbox-icon"
          >
            <svg
              class="bui-svg-icon"
              color="var(--bui-color-primary)"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 8C25.9 8 8 25.9 8 48s17.9 40 40 40 40-17.9 40-40S70.1 8 48 8Zm17 33.6L46.6 60c-1.5 1.5-4.1 1.5-5.6 0L31 50c-1.5-1.5-1.5-4.1 0-5.6l.1-.1c1.5-1.5 4.1-1.5 5.6 0l7.1 7.1L59.3 36c1.6-1.6 4.1-1.6 5.7 0 1.5 1.5 1.5 4.1 0 5.6Z"
                style="fill-rule:evenodd"
              />
            </svg>
          </div>
          <div
            class="bui-checkbox-label"
          >
            水门桥
          </div>
        </div>
        <div
          class="bui-checkbox bui-checkbox-label-right"
        >
          <input
            checked=""
            class="bui-checkbox-input"
            type="checkbox"
            value="淘票票"
          />
          <div
            class="bui-checkbox-icon"
          >
            <svg
              class="bui-svg-icon"
              color="var(--bui-color-primary)"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 8C25.9 8 8 25.9 8 48s17.9 40 40 40 40-17.9 40-40S70.1 8 48 8Zm17 33.6L46.6 60c-1.5 1.5-4.1 1.5-5.6 0L31 50c-1.5-1.5-1.5-4.1 0-5.6l.1-.1c1.5-1.5 4.1-1.5 5.6 0l7.1 7.1L59.3 36c1.6-1.6 4.1-1.6 5.7 0 1.5 1.5 1.5 4.1 0 5.6Z"
                style="fill-rule:evenodd"
              />
            </svg>
          </div>
          <div
            class="bui-checkbox-label"
          >
            淘票票
          </div>
        </div>
        <div
          class="bui-checkbox bui-checkbox-label-right"
        >
          <input
            checked=""
            class="bui-checkbox-input"
            type="checkbox"
            value="喜洋洋"
          />
          <div
            class="bui-checkbox-icon"
          >
            <svg
              class="bui-svg-icon"
              color="var(--bui-color-primary)"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 8C25.9 8 8 25.9 8 48s17.9 40 40 40 40-17.9 40-40S70.1 8 48 8Zm17 33.6L46.6 60c-1.5 1.5-4.1 1.5-5.6 0L31 50c-1.5-1.5-1.5-4.1 0-5.6l.1-.1c1.5-1.5 4.1-1.5 5.6 0l7.1 7.1L59.3 36c1.6-1.6 4.1-1.6 5.7 0 1.5 1.5 1.5 4.1 0 5.6Z"
                style="fill-rule:evenodd"
              />
            </svg>
          </div>
          <div
            class="bui-checkbox-label"
          >
            喜洋洋
          </div>
        </div>
      </div>
    </div>
    <div
      style="width: 100px;"
    >
      <button
        class="bui-btn bui-btn-outlined bui-btn-medium"
        type="button"
      >
        取消
      </button>
      <div
        class="bui-checkbox bui-checkbox-label-right"
      >
        <input
          checked=""
          class="bui-checkbox-input"
          type="checkbox"
        />
        <div
          class="bui-checkbox-icon"
        >
          <svg
            class="bui-svg-icon"
            color="var(--bui-color-primary)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M48 8C25.9 8 8 25.9 8 48s17.9 40 40 40 40-17.9 40-40S70.1 8 48 8Zm17 33.6L46.6 60c-1.5 1.5-4.1 1.5-5.6 0L31 50c-1.5-1.5-1.5-4.1 0-5.6l.1-.1c1.5-1.5 4.1-1.5 5.6 0l7.1 7.1L59.3 36c1.6-1.6 4.1-1.6 5.7 0 1.5 1.5 1.5 4.1 0 5.6Z"
              style="fill-rule:evenodd"
            />
          </svg>
        </div>
        <div
          class="bui-checkbox-label"
        >
          淘票票
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox snapshot > Checkbox demo snapshot 0 9`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap;"
  >
    <div
      style="width: 100px;"
    >
      <div>
        CheckboxGroup：
      </div>
      <div
        class="bui-checkbox-group"
      >
        <div
          class="bui-checkbox bui-checkbox-label-right"
        >
          <input
            checked=""
            class="bui-checkbox-input"
            type="checkbox"
            value="水门桥"
          />
          <div
            class="bui-checkbox-icon"
          >
            <svg
              class="bui-svg-icon"
              color="var(--bui-color-primary)"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 8C25.9 8 8 25.9 8 48s17.9 40 40 40 40-17.9 40-40S70.1 8 48 8Zm17 33.6L46.6 60c-1.5 1.5-4.1 1.5-5.6 0L31 50c-1.5-1.5-1.5-4.1 0-5.6l.1-.1c1.5-1.5 4.1-1.5 5.6 0l7.1 7.1L59.3 36c1.6-1.6 4.1-1.6 5.7 0 1.5 1.5 1.5 4.1 0 5.6Z"
                style="fill-rule:evenodd"
              />
            </svg>
          </div>
          <div
            class="bui-checkbox-label"
          >
            水门桥
          </div>
        </div>
        <div
          class="bui-checkbox bui-checkbox-label-right"
        >
          <input
            checked=""
            class="bui-checkbox-input"
            type="checkbox"
            value="淘票票"
          />
          <div
            class="bui-checkbox-icon"
          >
            <svg
              class="bui-svg-icon"
              color="var(--bui-color-primary)"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 8C25.9 8 8 25.9 8 48s17.9 40 40 40 40-17.9 40-40S70.1 8 48 8Zm17 33.6L46.6 60c-1.5 1.5-4.1 1.5-5.6 0L31 50c-1.5-1.5-1.5-4.1 0-5.6l.1-.1c1.5-1.5 4.1-1.5 5.6 0l7.1 7.1L59.3 36c1.6-1.6 4.1-1.6 5.7 0 1.5 1.5 1.5 4.1 0 5.6Z"
                style="fill-rule:evenodd"
              />
            </svg>
          </div>
          <div
            class="bui-checkbox-label"
          >
            淘票票
          </div>
        </div>
        <div
          class="bui-checkbox bui-checkbox-label-right"
        >
          <input
            checked=""
            class="bui-checkbox-input"
            type="checkbox"
            value="喜洋洋"
          />
          <div
            class="bui-checkbox-icon"
          >
            <svg
              class="bui-svg-icon"
              color="var(--bui-color-primary)"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 8C25.9 8 8 25.9 8 48s17.9 40 40 40 40-17.9 40-40S70.1 8 48 8Zm17 33.6L46.6 60c-1.5 1.5-4.1 1.5-5.6 0L31 50c-1.5-1.5-1.5-4.1 0-5.6l.1-.1c1.5-1.5 4.1-1.5 5.6 0l7.1 7.1L59.3 36c1.6-1.6 4.1-1.6 5.7 0 1.5 1.5 1.5 4.1 0 5.6Z"
                style="fill-rule:evenodd"
              />
            </svg>
          </div>
          <div
            class="bui-checkbox-label"
          >
            喜洋洋
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        Checkbox：
      </div>
      <div
        class="bui-checkbox bui-checkbox-label-right"
      >
        <input
          class="bui-checkbox-input"
          type="checkbox"
        />
        <div
          class="bui-checkbox-icon"
        >
          <svg
            class="bui-svg-icon"
            color="var(--bui-color-fg-disabled)"
            focusable="false"
            viewBox="0 0 96 96"
          >
            <path
              d="M82 48c0-18.778-15.222-34-34-34S14 29.222 14 48s15.222 34 34 34v6C25.909 88 8 70.091 8 48S25.909 8 48 8s40 17.909 40 40-17.909 40-40 40v-6c18.778 0 34-15.222 34-34Z"
            />
          </svg>
        </div>
        <div
          class="bui-checkbox-label"
        >
          淘票票
        </div>
      </div>
    </div>
  </div>
</div>
`;
